k8s/ipfs/ipfs-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ipfs-node
  namespace: default
spec:
  serviceName: ipfs-service
  replicas: 1
  selector:
    matchLabels:
      app: ipfs-node
  template:
    metadata:
      labels:
        app: ipfs-node
    spec:
      nodeSelector:
        kubernetes.io/hostname: racknerd-1203387
      containers:
      - name: kubo
        image: ipfs/kubo:latest
        ports:
        - containerPort: 4001
          name: swarm
        - containerPort: 5001
          name: api
        - containerPort: 8080
          name: gateway
        volumeMounts:
        - name: ipfs-data
          mountPath: /data/ipfs
  volumeClaimTemplates:
  - metadata:
      name: ipfs-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
