k8s/ipfs/ipfs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipfs-gateway-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: ipfs.thefoldwithin.earth
    http:
      paths:
      - path: /ipfs
        pathType: Prefix
        backend:
          service:
            name: ipfs-service
            port:
              number: 8080
      - path: /ipns
        pathType: Prefix
        backend:
          service:
            name: ipfs-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ipfs-index-service
            port:
              number: 80
